--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-image": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
