--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hash-router": "^0.2.0",
     "react-image": "^2.2.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
